fix: image zoom too large

--- a/src/components/PostComponents/Image/style.module.css
+++ b/src/components/PostComponents/Image/style.module.css
@@ -4,6 +4,7 @@
 	padding: 0;
 	margin: auto;
 	cursor: zoom-in;
+	max-width: 56rem;
 }
 
 .alt {
